overflow fixed

--- a/templateDraft2.css
+++ b/templateDraft2.css
@@ -35,7 +35,7 @@ body, html{
 .wrapper{
 	position: relative;
 	width: 860px;
-	margin: 20px auto;
+	margin: 0px auto;
 	min-height: 100%;
 
 }
@@ -264,7 +264,7 @@ Footer Specs
 
 @media all {
 	.page-break	{ 
-		display: none; 
+		display: none;
 	}
 }
 
